; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-resolve/extr_sd-resolve.c_resolve_freeaddrinfo.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-resolve/extr_sd-resolve.c_resolve_freeaddrinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.addrinfo = type { %struct.addrinfo*, %struct.addrinfo*, %struct.addrinfo* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.addrinfo*)* @resolve_freeaddrinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @resolve_freeaddrinfo(%struct.addrinfo* %0) #0 {
  %2 = alloca %struct.addrinfo*, align 8
  %3 = alloca %struct.addrinfo*, align 8
  store %struct.addrinfo* %0, %struct.addrinfo** %2, align 8
  br label %4

4:                                                ; preds = %7, %1
  %5 = load %struct.addrinfo*, %struct.addrinfo** %2, align 8
  %6 = icmp ne %struct.addrinfo* %5, null
  br i1 %6, label %7, label %22

7:                                                ; preds = %4
  %8 = load %struct.addrinfo*, %struct.addrinfo** %2, align 8
  %9 = getelementptr inbounds %struct.addrinfo, %struct.addrinfo* %8, i32 0, i32 2
  %10 = load %struct.addrinfo*, %struct.addrinfo** %9, align 8
  store %struct.addrinfo* %10, %struct.addrinfo** %3, align 8
  %11 = load %struct.addrinfo*, %struct.addrinfo** %2, align 8
  %12 = getelementptr inbounds %struct.addrinfo, %struct.addrinfo* %11, i32 0, i32 1
  %13 = load %struct.addrinfo*, %struct.addrinfo** %12, align 8
  %14 = call i32 @free(%struct.addrinfo* %13)
  %15 = load %struct.addrinfo*, %struct.addrinfo** %2, align 8
  %16 = getelementptr inbounds %struct.addrinfo, %struct.addrinfo* %15, i32 0, i32 0
  %17 = load %struct.addrinfo*, %struct.addrinfo** %16, align 8
  %18 = call i32 @free(%struct.addrinfo* %17)
  %19 = load %struct.addrinfo*, %struct.addrinfo** %2, align 8
  %20 = call i32 @free(%struct.addrinfo* %19)
  %21 = load %struct.addrinfo*, %struct.addrinfo** %3, align 8
  store %struct.addrinfo* %21, %struct.addrinfo** %2, align 8
  br label %4

22:                                               ; preds = %4
  ret void
}

declare dso_local i32 @free(%struct.addrinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
